7112413: JVM Crash, possibly GC-related

Disable UseAdaptiveSizePolicy with the CMS and ParNew

Reviewed-by: johnc, brutisso